# Sencha

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  chakin.imgui.ini  kyusu.imgui.ini
Sencha.2D/: CMakeLists.txt
Sencha.3D/: CMakeLists.txt
Sencha.Core/: CMakeLists.txt
app/: CMakeLists.txt  main.cpp
ecs_spike/: CMakeLists.txt
ecs_spike/benchmark/: bench_churn.cpp  bench_iteration.cpp
ecs_spike/examples/: example_systems.cpp
ecs_spike/src/: CommandBuffer.cpp
editor/: ARCHITECTURE.md  CMakeLists.txt  main.cpp
editor/app/: EditorApp.cpp  EditorApp.h  EditorViewportCameraSystem.cpp  EditorViewportCameraSystem.h
editor/chakin/: CMakeLists.txt
editor/commands/: CommandStack.cpp  CommandStack.h  CompositeCommand.h  ICommand.h
editor/common/: CMakeLists.txt
editor/editmodes/: BoundsManipulator.cpp  BoundsManipulator.h  EditSessionHost.cpp  EditSessionHost.h  GizmoMath.h  IEditSession.h  IGizmo.h  IManipulator.h  ManipulatorSession.cpp  ManipulatorSession.h  SelectionPivot.cpp  SelectionPivot.h  TranslateGizmo.cpp  TranslateGizmo.h  TranslateManipulator.cpp  TranslateManipulator.h
editor/fonts/: README.md
editor/input/: GestureRecognizer.cpp  GestureRecognizer.h  InputEvent.h  InputRouter.cpp  InputRouter.h  ShortcutRegistry.cpp  ShortcutRegistry.h  UiInputGuard.cpp  ViewportNavigation.cpp  ViewportNavigation.h  ViewportToolDispatcher.cpp  ViewportToolDispatcher.h
editor/interaction/: IInteraction.h  InteractionHost.cpp  InteractionHost.h
editor/kettle/: CMakeLists.txt
editor/kyusu/: CMakeLists.txt
editor/level/: BrushCookInput.cpp  BrushCreationSettings.h  BrushEditTarget.cpp  BrushEditTarget.h  BrushGeometry.cpp  BrushGeometry.h  BrushManipulationSink.cpp  BrushManipulationSink.h  DocumentFileActions.cpp  LevelCommands.cpp  LevelCommands.h  LevelCook.cpp  LevelCook.h  LevelDocument.cpp  LevelDocument.h  LevelScene.cpp  LevelScene.h  LevelSerialization.cpp  LevelWorkspace.cpp  LevelWorkspace.h  MaterialLibrary.h  SceneBrushWalk.h
editor/meshedit/: ElementGeometry.h  ManipulationSink.h  MeshEditService.cpp  MeshEditService.h  MeshElementKind.h
editor/meshes/: camera.glb
editor/project/: PieSession.cpp  Project.cpp  Project.h
editor/render/: BrushPreviewRenderer.cpp  BrushPreviewRenderer.h  BrushSolidRenderer.h  ComponentVisualRenderer.cpp  ComponentVisualRenderer.h  EditorImmediatePipeline.h  EditorLinePipeline.cpp  EditorLinePipeline.h  EditorRenderFeature.cpp  EditorRenderFeature.h  EditorSolidPipeline.cpp  EditorSolidPipeline.h  GpuGridRenderer.cpp  GpuGridRenderer.h  IBrushBodyRenderer.h  PreviewBuffer.cpp  PreviewBuffer.h  SelectionRenderer.cpp  SelectionRenderer.h  ViewportBackdropRenderer.h  WireframeRenderer.cpp  WireframeRenderer.h
editor/selection/: ISelectionContext.h  SelectCommand.cpp  SelectCommand.h  SelectableRef.h  SelectionContext.cpp  SelectionContext.h  SelectionFold.cpp  SelectionService.cpp  SelectionService.h
editor/shaders/: bloom_blur.frag.glsl  bloom_brightpass.frag.glsl  bloom_composite.frag.glsl  editor_solid.vert.glsl  editor_wideline.frag.glsl  grid.frag.glsl  grid.vert.glsl
editor/src/: EditorTheme.h  main.cpp
editor/themes/: dark_teal.json
editor/tools/: ITool.h  ToolContext.cpp  ToolContext.h  ToolRegistry.cpp  ToolRegistry.h
editor/ui/: EditorConsolePanel.cpp  EditorConsolePanel.h  EditorSkin.cpp  EditorSkin.h  EditorStatusBar.cpp  EditorStatusBar.h  EditorToolbar.cpp  EditorToolbar.h  EditorUiFeature.cpp  EditorUiFeature.h  EditorUiSkin.cpp  EditorUiSkin.h  EditorUiStyle.cpp  EditorUiStyle.h  IEditorPanel.h  InspectorPanel.cpp  InspectorPanel.h  MeshEditPanel.cpp  MeshEditPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  SchemaWidgets.h  ToolPalettePanel.cpp  ToolPalettePanel.h  ViewportPanel.cpp  ViewportPanel.h
editor/viewport/: EditorCamera.cpp  EditorCamera.h  EditorViewport.cpp  EditorViewport.h  EditorViewportCameraSystem.h  FourWayViewportLayout.cpp  FourWayViewportLayout.h  IViewportLayout.h  MarqueeState.h  Picking.cpp  Picking.h  ViewportId.h  ViewportLayout.cpp  ViewportLayout.h  ViewportMath.h  ViewportOrientation.cpp  ViewportProjection.h
engine/: CMakeLists.txt
engine/3d/: CMakeLists.txt
engine/core/: CMakeLists.txt
engine/infuser/: CMakeLists.txt
engine/runtime/: CMakeLists.txt
engine/shaders/: mesh_forward.frag.glsl  mesh_forward.vert.glsl
example/AudioTest/: CMakeLists.txt  main.cpp
example/CubeDemo/: CMakeLists.txt  CubeDemoGame.cpp  CubeDemoGame.h  CubeDemoScene.cpp  CubeDemoScene.h  CubeDemoSystems.cpp  CubeDemoSystems.h  FreeCamera.cpp  FreeCamera.h  GenerateCubeDemoAssets.cpp  cube_demo_scene.json  main.cpp
example/QuadTreeDemo/: CMakeLists.txt  QuadTreeDemo.cpp  QuadTreeDemoGame.cpp  QuadTreeDemoGame.h  QuadTreeDemoInput.cpp  QuadTreeDemoInput.h  QuadTreeDemoRender.cpp  QuadTreeDemoRender.h  input_config.json
example/SceneViewer/: CMakeLists.txt  FreeCamera.cpp  FreeCamera.h  SceneViewerGame.cpp  SceneViewerGame.h
examples/maze/: CMakeLists.txt  Maze.h  MazeRenderer.cpp  MazeRenderer.h  PlayerSystem.cpp  PlayerSystem.h  Shaders.h  main.cpp
template/: .gitignore  CMakeLists.txt  README.md  project.senchaproj
template/assets/: test.json  test2.json
template/src/: FreeCamera.h  SpinComponent.h  TemplateGame.cpp  TemplateGame.h
test/: CMakeLists.txt
test/brush/: BrushCreationPlaneTests.cpp  BrushHalfEdgeTests.cpp  BrushMeshStoreTests.cpp  BrushOpsTests.cpp  BrushTessellationTests.cpp  BrushValidationTests.cpp  FaceMaterialTests.cpp  MeshEditServiceTests.cpp  MeshElementsTests.cpp  SelectionContextTests.cpp  SelectionFoldTests.cpp  SelectionLabelsTests.cpp  SelectionReconcileTests.cpp  ViewportMathTests.cpp
test/core/: ApplicationTests.cpp  AssetIdTests.cpp  AssetImportTests.cpp  AssetLoaderTests.cpp  AudioAssetTests.cpp  AudioOggFixture.h  BrushClusteringTests.cpp  BrushGeometryCookTests.cpp  ComponentTypeIdTests.cpp  ConsoleInputTests.cpp  ConsoleTests.cpp  ContentHashTests.cpp  CookPruneTests.cpp  DataBatchTests.cpp  EngineConfigTests.cpp  EngineConsoleBuiltinsTests.cpp  EngineScheduleTests.cpp  EventBufferTests.cpp  (+28 more)
(+1849 files in other folders)
